--- a/App.xaml
+++ b/App.xaml
@@ -1,7 +1,6 @@
 ﻿<Application x:Class="IISLogToExcelConverter.App"
  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
- xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
- StartupUri="IISLogsToExcel.xaml">
+ xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
     <Application.Resources>
 
