--- a/IISLogsToExcel.xaml
+++ b/IISLogsToExcel.xaml
@@ -1,44 +1,68 @@
 ﻿<Window x:Class="IISLogToExcelConverter.IISLogExporter"
  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
- Title="IIS Log to Excel Converter" Height="182" Width="500" ResizeMode="NoResize"
+ Title="IIS Log to Excel Converter" Height="215" Width="540" ResizeMode="NoResize"
  AllowDrop="True"
  DragOver="FolderPath_DragOver"
  Drop="FolderPath_Drop"
  ToolTip="Converts IIS log data to excel. Drop log folder here to select location.">
-
-    <DockPanel>
-        <StatusBar DockPanel.Dock="Bottom" Name="statusBar">
-            <TextBlock Name="statusText" Text="Ready" ToolTip="Displays progress messages." />
-        </StatusBar>
-
-        <StackPanel Margin="10">
-            <Button Name="selectFolderButton" Content="Select Folder" Click="SelectFolderButton_Click" Width="120" Margin="0,0,0,10"
-                    ToolTip="Click to select log folder."/>
-            <TextBox Name="folderPathTextBox" IsReadOnly="True" Margin="0,0,0,10" ToolTip="Selected log folder location."/>
-            <Button Name="processButton" Content="Process Logs" Click="ProcessButton_Click" Width="120" ToolTip="Click to process logs."/>
-            <Rectangle Height="10" Fill="Transparent" />
-
-            <Grid>
+    <Window.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Styles.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </Window.Resources>
+    <Border Name="appborder" 
+        BorderThickness="3"
+        BorderBrush="{StaticResource ControlEnabled}">
+        <DockPanel>
+            <Grid DockPanel.Dock="Top">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="*" />
-                    <ColumnDefinition Width="*" />
                 </Grid.ColumnDefinitions>
-
-                <StackPanel Grid.Column="0">
-                    <CheckBox x:Name="isSingleWorkBook" Content="Create Single Workbook" IsChecked="False" Click="SingleWorkbook_Click" 
-                              ToolTip="Check to create single workbook with sheet against each log file conent." />
-                </StackPanel>
-                <StackPanel Grid.Column="1">
-                    <CheckBox x:Name="deleteSourceFiles" Content="Delete Source Logs" IsChecked="False" Click="DeleteSources_Click" 
-                              ToolTip="Check to delete source logs after processing." HorizontalAlignment="Right" />
-                </StackPanel>
-                <StackPanel Grid.Column="3">
-                    <CheckBox x:Name="createPivotTable" Content="Create Pivot Table" IsChecked="False" Click="PivotTable_Click" 
-                              ToolTip="Check to create RPS pivot table with hour in filter." HorizontalAlignment="Right" />
-                </StackPanel>
+                <ProgressBar Name="progressBar" Height="20" Minimum="0" Maximum="100" Value="0" Foreground="LimeGreen" 
+                             Style="{StaticResource ProgressBarStyle}" ToolTip="Progress meter."/>
+                <TextBlock Name="progressText" Text="0%" TextAlignment="Center" FontWeight="Bold"/>
             </Grid>
-        </StackPanel>
-    </DockPanel>
+            <StatusBar DockPanel.Dock="Bottom" Name="statusBar" Background="{StaticResource ControlEnabled}">
+                <TextBlock Name="statusText" Text="Ready" ToolTip="Displays progress messages." />
+            </StatusBar>
+
+            <StackPanel Margin="10">
+                <Button Name="selectFolderButton" Content="Select Folder" Click="SelectFolderButton_Click" Width="120" Margin="0,0,0,10"
+                    ToolTip="Click to select log folder." Style="{DynamicResource RoundedButton}" Background="{StaticResource ControlEnabled}"
+                    Height="22" FontSize="13"/>
+                <TextBox Name="folderPathTextBox" IsReadOnly="True" Margin="0,0,0,10" ToolTip="Selected log folder location."/>
+                <Button Name="processButton" Content="Process Logs" Click="ProcessButton_Click" Width="120" ToolTip="Click to process logs."
+                        Height="22" Style="{DynamicResource RoundedButton}" Background="LimeGreen" FontWeight="Bold" 
+                        FontSize="13"/>
+                <Rectangle Height="10" Fill="Transparent" />
+
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
+
+                    <StackPanel Grid.Column="0">
+                        <CheckBox x:Name="isSingleWorkBook" Content="Create Single Workbook" IsChecked="False" Click="SingleWorkbook_Click" 
+                                  ToolTip="Check to create single workbook with sheet against each log file conent." 
+                                  Style="{DynamicResource SliderCheckBox}" />
+                    </StackPanel>
+                    <StackPanel Grid.Column="1">
+                        <CheckBox x:Name="deleteSourceFiles" Content="Delete Source Logs" IsChecked="False" Click="DeleteSources_Click" 
+                              ToolTip="Check to delete source logs after processing." HorizontalAlignment="Right" 
+                                  Style="{DynamicResource SliderCheckBox}"/>
+                    </StackPanel>
+                    <StackPanel Grid.Column="3" >
+                        <CheckBox x:Name="createPivotTable" Content="Create Pivot Table" IsChecked="False" Click="PivotTable_Click" 
+                              ToolTip="Check to create RPS pivot table with hour in filter." HorizontalAlignment="Right" 
+                              Style="{DynamicResource SliderCheckBox}" />
+                    </StackPanel>
+                </Grid>
+            </StackPanel>
+        </DockPanel>
+    </Border>
 </Window>
