--- a/IISLogsToExcel.xaml
+++ b/IISLogsToExcel.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="IISLogsToExcel.IISLogExporter"
  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
- Title="IIS Log to Excel Converter" Height="218" Width="540" ResizeMode="NoResize"
+ Title="IIS Log to Excel Converter" Height="358" Width="540" ResizeMode="NoResize"
  AllowDrop="True"
  DragOver="FolderPath_DragOver"
  Drop="FolderPath_Drop"
@@ -14,30 +14,59 @@
         </ResourceDictionary>
     </Window.Resources>
     <Border Name="appborder" 
-        BorderThickness="3"
-        BorderBrush="{StaticResource ControlEnabled}">
+            BorderThickness="3"
+            BorderBrush="{StaticResource ControlEnabled}">
         <DockPanel>
             <Grid DockPanel.Dock="Top">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
-                <ProgressBar Name="progressBar" Height="20" Minimum="0" Maximum="100" Value="0" Foreground="LimeGreen" 
-                             Style="{StaticResource ProgressBarStyle}" ToolTip="Progress meter."/>
-                <TextBlock Name="progressText" Text="0%" TextAlignment="Center" FontWeight="Bold"/>
+                <ProgressBar Name="progressBar" 
+                             Height="20" 
+                             Minimum="0" 
+                             Maximum="100" 
+                             Value="0" 
+                             Foreground="LimeGreen" 
+                             Style="{StaticResource ProgressBarStyle}" 
+                             ToolTip="Progress meter."/>
+                <TextBlock Name="progressText" 
+                           Text="0%" 
+                           TextAlignment="Center" 
+                           FontWeight="Bold"/>
             </Grid>
-            
-            <StatusBar DockPanel.Dock="Bottom" Name="statusBar" Background="{StaticResource ControlEnabled}">
-                <TextBlock Name="statusText" Text="Ready" ToolTip="Displays progress messages." />
+
+            <StatusBar DockPanel.Dock="Bottom" 
+                       Name="statusBar" 
+                       Background="{StaticResource ControlEnabled}">
+                <TextBlock Name="statusText" 
+                           Text="Ready" 
+                           ToolTip="Displays progress messages." 
+                           FontWeight="DemiBold"/>
             </StatusBar>
 
             <StackPanel Margin="10">
-                <Button Name="selectFolderButton" Content="Select Folder" Click="SelectFolderButton_Click" Width="120" Margin="0,0,0,10"
-                    ToolTip="Click to select log folder." Style="{DynamicResource RoundedButton}" Background="{StaticResource ControlEnabled}"
-                    Height="22" FontSize="13"/>
-                <TextBox Name="folderPathTextBox" IsReadOnly="True" Margin="0,0,0,10" MouseDoubleClick="FolderPathTextBox_DblClick"
+                <Button Name="selectFolderButton" 
+                        Content="Select Folder" 
+                        Click="SelectFolderButton_Click" 
+                        Width="120" Margin="0,0,0,10"
+                        ToolTip="Click to select log folder." 
+                        Style="{DynamicResource RoundedButton}" Background="{StaticResource ControlEnabled}"
+                        Height="22" 
+                        FontSize="13" 
+                        FontWeight="DemiBold"/>
+                <TextBox Name="folderPathTextBox" 
+                         IsReadOnly="True" 
+                         Margin="0,0,0,10" 
+                         MouseDoubleClick="FolderPathTextBox_DblClick"
                          ToolTip="Selected log folder location, double click to select/open location."/>
-                <Button Name="processButton" Content="Process Logs" Click="ProcessButton_Click" Width="120" ToolTip="Click to process logs."
-                        Height="22" Style="{DynamicResource RoundedButton}" Background="LimeGreen" FontWeight="Bold" 
+                <Button Name="processButton" 
+                        Content="Process Logs" 
+                        Click="ProcessButton_Click" 
+                        Width="120" 
+                        ToolTip="Click to process logs."
+                        Height="22" 
+                        Style="{DynamicResource RoundedButton}" 
+                        Background="LimeGreen" FontWeight="Bold" 
                         FontSize="13"/>
                 <Rectangle Height="10" Fill="Transparent" />
 
@@ -47,20 +76,55 @@
                         <ColumnDefinition Width="*" />
                         <ColumnDefinition Width="*" />
                     </Grid.ColumnDefinitions>
-                    <StackPanel Grid.Column="0">
-                        <CheckBox x:Name="isSingleWorkBook" Content="Create Single Workbook" IsChecked="False" Click="SingleWorkbook_Click" 
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="*"/>
+                    </Grid.RowDefinitions>
+                    <StackPanel Grid.Column="0" Grid.Row="0">
+                        <CheckBox x:Name="isSingleWorkBook" 
+                                  Content="Create Single Workbook" 
+                                  IsChecked="False" 
+                                  Click="SingleWorkbook_Click" 
                                   ToolTip="Check to create single workbook with sheet against each log file conent." 
-                                  Style="{DynamicResource SliderCheckBox}" />
+                                  Style="{DynamicResource SliderCheckBox}" 
+                                  FontWeight="DemiBold"/>
                     </StackPanel>
-                    <StackPanel Grid.Column="1">
-                        <CheckBox x:Name="deleteSourceFiles" Content="Delete Source Logs" IsChecked="False" Click="DeleteSources_Click" 
-                              ToolTip="Check to delete source logs after processing." HorizontalAlignment="Right" 
-                                  Style="{DynamicResource SliderCheckBox}"/>
+                    <StackPanel Grid.Column="1" Grid.Row="0">
+                        <CheckBox x:Name="deleteSourceFiles" 
+                                  Content="Delete Source Logs" 
+                                  IsChecked="False" 
+                                  Click="DeleteSources_Click" 
+                                  ToolTip="Check to delete source logs after processing." 
+                                  HorizontalAlignment="Right" 
+                                  Style="{DynamicResource SliderCheckBox}" 
+                                  FontWeight="DemiBold"/>
                     </StackPanel>
-                    <StackPanel Grid.Column="3" >
-                        <CheckBox x:Name="createPivotTable" Content="Create Pivot Table" IsChecked="False" Click="PivotTable_Click" 
-                              ToolTip="Check to create RPS pivot table with hour in filter." HorizontalAlignment="Right" 
-                              Style="{DynamicResource SliderCheckBox}" />
+                    <StackPanel Grid.Column="2" Grid.Row="0">
+                        <CheckBox x:Name="createPivotTable" 
+                                  Content="Create Pivot Table" 
+                                  IsChecked="False" 
+                                  Click="PivotTable_Click" 
+                                  ToolTip="Check to create RPS pivot table with hour in filter." 
+                                  HorizontalAlignment="Right" 
+                                  Style="{DynamicResource SliderCheckBox}" 
+                                  FontWeight="DemiBold"/>
+                    </StackPanel>
+                    <StackPanel Grid.ColumnSpan="3" Grid.Row="1" Margin="0, 10, 0, 0">
+                        <ListBox ItemsSource="{Binding Path=LogFiles, Mode=TwoWay}"
+                                 Name="lbLogFiles" 
+                                 IsTabStop="False"
+                                 Height="130">
+                            <ListBox.ItemTemplate>
+                                <DataTemplate>
+                                    <WrapPanel>
+                                        <TextBlock Text="{Binding ID, Mode=TwoWay}" 
+                                                   Foreground="DeepSkyBlue"/>
+                                        <TextBlock Text="{Binding Name, Mode=TwoWay}"
+                                                   Foreground="{Binding Color, Mode=TwoWay}" />
+                                    </WrapPanel>
+                                </DataTemplate>
+                            </ListBox.ItemTemplate>
+                        </ListBox>
                     </StackPanel>
                 </Grid>
             </StackPanel>
