--- a/IISLogsToExcel.xaml
+++ b/IISLogsToExcel.xaml
@@ -1,11 +1,15 @@
 ﻿<Window x:Class="IISLogsToExcel.IISLogExporter"
- xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
- xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
- Title="IIS Log to Excel Converter" Height="358" Width="540" ResizeMode="NoResize"
- AllowDrop="True"
- DragOver="FolderPath_DragOver"
- Drop="FolderPath_Drop"
- ToolTip="Converts IIS log data to excel. Drop log folder here to select location.">
+        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        Title="IIS Log to Excel Converter" 
+        Height="360" Width="570" 
+        WindowStyle="ThreeDBorderWindow"
+        WindowStartupLocation="CenterScreen"
+        ResizeMode="CanMinimize"
+        AllowDrop="True"
+        DragOver="FolderPath_DragOver"
+        Drop="FolderPath_Drop"
+        ToolTip="Converts IIS log data to excel. Drop log folder here to select location.">
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -26,9 +30,24 @@
                              Minimum="0" 
                              Maximum="100" 
                              Value="0" 
-                             Foreground="LimeGreen" 
-                             Style="{StaticResource ProgressBarStyle}" 
-                             ToolTip="Progress meter."/>
+                             Foreground="LimeGreen"
+                             Background="White"
+                             ToolTip="Progress meter.">
+                    <ProgressBar.Style>
+                    <Style TargetType="ProgressBar">
+                        <Setter Property="Template">
+                            <Setter.Value>
+                                <ControlTemplate TargetType="ProgressBar">
+                                    <Grid x:Name="TemplateRoot" SnapsToDevicePixels="true">
+                                        <Rectangle x:Name="PART_Track" Fill="{TemplateBinding Background}" />
+                                        <Rectangle x:Name="PART_Indicator" Fill="{TemplateBinding Foreground}" HorizontalAlignment="Left" />
+                                    </Grid>
+                                </ControlTemplate>
+                            </Setter.Value>
+                        </Setter>
+                    </Style>
+                    </ProgressBar.Style>
+                </ProgressBar>
                 <TextBlock Name="progressText" 
                            Text="0%" 
                            TextAlignment="Center" 
@@ -75,6 +94,7 @@
                         <ColumnDefinition Width="*"/>
                         <ColumnDefinition Width="*" />
                         <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="*" />
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto"/>
@@ -82,7 +102,7 @@
                     </Grid.RowDefinitions>
                     <StackPanel Grid.Column="0" Grid.Row="0">
                         <CheckBox x:Name="isSingleWorkBook" 
-                                  Content="Create Single Workbook" 
+                                  Content="Single Workbook" 
                                   IsChecked="False" 
                                   Click="SingleWorkbook_Click" 
                                   ToolTip="Check to create single workbook with sheet against each log file conent." 
@@ -91,7 +111,7 @@
                     </StackPanel>
                     <StackPanel Grid.Column="1" Grid.Row="0">
                         <CheckBox x:Name="deleteSourceFiles" 
-                                  Content="Delete Source Logs" 
+                                  Content="Delete Sources" 
                                   IsChecked="False" 
                                   Click="DeleteSources_Click" 
                                   ToolTip="Check to delete source logs after processing." 
@@ -100,8 +120,18 @@
                                   FontWeight="DemiBold"/>
                     </StackPanel>
                     <StackPanel Grid.Column="2" Grid.Row="0">
+                        <CheckBox x:Name="systemTheme" 
+                                  Content="Dark Mode" 
+                                  IsChecked="False" 
+                                  Click="SystemTheme_Click" 
+                                  ToolTip="Check to apply dark theme." 
+                                  HorizontalAlignment="Right" 
+                                  Style="{DynamicResource SliderCheckBox}" 
+                                  FontWeight="DemiBold"/>
+                    </StackPanel>
+                    <StackPanel Grid.Column="3" Grid.Row="0">
                         <CheckBox x:Name="createPivotTable" 
-                                  Content="Create Pivot Table" 
+                                  Content="Create Pivot" 
                                   IsChecked="False" 
                                   Click="PivotTable_Click" 
                                   ToolTip="Check to create RPS pivot table with hour in filter." 
@@ -109,10 +139,11 @@
                                   Style="{DynamicResource SliderCheckBox}" 
                                   FontWeight="DemiBold"/>
                     </StackPanel>
-                    <StackPanel Grid.ColumnSpan="3" Grid.Row="1" Margin="0, 10, 0, 0">
+                    <StackPanel Grid.ColumnSpan="4" Grid.Row="1" Margin="0, 10, 0, 0">
                         <ListBox ItemsSource="{Binding Path=LogFiles, Mode=TwoWay}"
                                  Name="lbLogFiles" 
                                  IsTabStop="False"
+                                 ToolTip="List of log files to process."
                                  Height="130">
                             <ListBox.ItemTemplate>
                                 <DataTemplate>
