--- a/IISLogsToExcel.xaml
+++ b/IISLogsToExcel.xaml
@@ -9,6 +9,7 @@
         AllowDrop="True"
         DragOver="FolderPath_DragOver"
         Drop="FolderPath_Drop"
+        Closing="Window_Closing"
         ToolTip="Converts IIS log data to excel. Drop log folder here to select location.">
     <Window.Resources>
         <ResourceDictionary>
