--- a/IISLogsToExcel.xaml
+++ b/IISLogsToExcel.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="IIS Log to Excel Converter" 
-        Height="360" Width="570" 
+        Height="380" Width="570" 
         WindowStyle="ThreeDBorderWindow"
         WindowStartupLocation="CenterScreen"
         ResizeMode="CanMinimize"
@@ -35,18 +35,18 @@
                              Background="White"
                              ToolTip="Progress meter.">
                     <ProgressBar.Style>
-                    <Style TargetType="ProgressBar">
-                        <Setter Property="Template">
-                            <Setter.Value>
-                                <ControlTemplate TargetType="ProgressBar">
-                                    <Grid x:Name="TemplateRoot" SnapsToDevicePixels="true">
-                                        <Rectangle x:Name="PART_Track" Fill="{TemplateBinding Background}" />
-                                        <Rectangle x:Name="PART_Indicator" Fill="{TemplateBinding Foreground}" HorizontalAlignment="Left" />
-                                    </Grid>
-                                </ControlTemplate>
-                            </Setter.Value>
-                        </Setter>
-                    </Style>
+                        <Style TargetType="ProgressBar">
+                            <Setter Property="Template">
+                                <Setter.Value>
+                                    <ControlTemplate TargetType="ProgressBar">
+                                        <Grid x:Name="TemplateRoot" SnapsToDevicePixels="true">
+                                            <Rectangle x:Name="PART_Track" Fill="{TemplateBinding Background}" />
+                                            <Rectangle x:Name="PART_Indicator" Fill="{TemplateBinding Foreground}" HorizontalAlignment="Left" />
+                                        </Grid>
+                                    </ControlTemplate>
+                                </Setter.Value>
+                            </Setter>
+                        </Style>
                     </ProgressBar.Style>
                 </ProgressBar>
                 <TextBlock Name="progressText" 
@@ -65,100 +65,114 @@
             </StatusBar>
 
             <StackPanel Margin="10">
-                <Button Name="selectFolderButton" 
-                        Content="Select Folder" 
-                        Click="SelectFolderButton_Click" 
-                        Width="120" Margin="0,0,0,10"
-                        ToolTip="Click to select log folder." 
-                        Style="{DynamicResource RoundedButton}" Background="{StaticResource ControlEnabled}"
-                        Height="22" 
-                        FontSize="13" 
-                        FontWeight="DemiBold"/>
-                <TextBox Name="folderPathTextBox" 
-                         IsReadOnly="True" 
-                         Margin="0,0,0,10" 
-                         MouseDoubleClick="FolderPathTextBox_DblClick"
-                         ToolTip="Selected log folder location, double click to select/open location."/>
-                <Button Name="processButton" 
-                        Content="Process Logs" 
-                        Click="ProcessButton_Click" 
-                        Width="120" 
-                        ToolTip="Click to process logs."
-                        Height="22" 
-                        Style="{DynamicResource RoundedButton}" 
-                        Background="LimeGreen" FontWeight="Bold" 
-                        FontSize="13"/>
-                <Rectangle Height="10" Fill="Transparent" />
-
                 <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="*" />
-                        <ColumnDefinition Width="*" />
-                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="Auto"/>
                     </Grid.ColumnDefinitions>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="*"/>
-                    </Grid.RowDefinitions>
-                    <StackPanel Grid.Column="0" Grid.Row="0">
-                        <CheckBox x:Name="isSingleWorkBook" 
-                                  Content="Single Workbook" 
-                                  IsChecked="False" 
-                                  Click="SingleWorkbook_Click" 
-                                  ToolTip="Check to create single workbook with sheet against each log file conent." 
-                                  Style="{DynamicResource SliderCheckBox}" 
-                                  FontWeight="DemiBold"/>
-                    </StackPanel>
-                    <StackPanel Grid.Column="1" Grid.Row="0">
-                        <CheckBox x:Name="enableLogging" 
-                                  Content="Enable Logging" 
-                                  IsChecked="True" 
-                                  Click="EnableLogging_Click" 
-                                  ToolTip="Check to enable processing logs (one log per day)." 
-                                  HorizontalAlignment="Right" 
-                                  Style="{DynamicResource SliderCheckBox}" 
-                                  FontWeight="DemiBold"/>
-                    </StackPanel>
-                    <StackPanel Grid.Column="2" Grid.Row="0">
-                        <CheckBox x:Name="systemTheme" 
-                                  Content="Dark Mode" 
-                                  IsChecked="False" 
-                                  Click="SystemTheme_Click" 
-                                  ToolTip="Check to apply dark theme." 
-                                  HorizontalAlignment="Right" 
-                                  Style="{DynamicResource SliderCheckBox}" 
-                                  FontWeight="DemiBold"/>
-                    </StackPanel>
-                    <StackPanel Grid.Column="3" Grid.Row="0">
-                        <CheckBox x:Name="createPivotTable" 
-                                  Content="Create Pivot" 
-                                  IsChecked="False" 
-                                  Click="PivotTable_Click" 
-                                  ToolTip="Check to create RPS pivot table with hour in filter." 
-                                  HorizontalAlignment="Right" 
-                                  Style="{DynamicResource SliderCheckBox}" 
-                                  FontWeight="DemiBold"/>
-                    </StackPanel>
-                    <StackPanel Grid.ColumnSpan="4" Grid.Row="1" Margin="0, 10, 0, 0">
-                        <ListBox ItemsSource="{Binding Path=LogFiles, Mode=TwoWay}"
-                                 Name="lbLogFiles" 
-                                 IsTabStop="False"
-                                 ToolTip="List of log files to process."
-                                 Height="130">
-                            <ListBox.ItemTemplate>
-                                <DataTemplate>
-                                    <WrapPanel>
-                                        <TextBlock Text="{Binding ID, Mode=TwoWay}" 
-                                                   Foreground="DeepSkyBlue"/>
-                                        <TextBlock Text="{Binding Name, Mode=TwoWay}"
-                                                   Foreground="{Binding Color, Mode=TwoWay}" />
-                                    </WrapPanel>
-                                </DataTemplate>
-                            </ListBox.ItemTemplate>
-                        </ListBox>
-                    </StackPanel>
+                    <TextBox Name="folderPathTextBox" 
+                             IsReadOnly="True" 
+                             Grid.Column="0"
+                             VerticalContentAlignment="Center"
+                             Height="24" 
+                             MouseDoubleClick="FolderPathTextBox_DblClick"
+                             ToolTip="Selected log folder location, double click to select/open location."/>
+                    <Button Name="selectFolderButton" 
+                            Grid.Column="1"
+                            HorizontalAlignment="Right"
+                            Content="BROWSE" 
+                            Click="SelectFolderButton_Click" 
+                            Width="70" 
+                            ToolTip="Click to select log folder." 
+                            Style="{DynamicResource RoundedButton}" Background="{StaticResource ControlEnabled}"
+                            Height="24" 
+                            FontSize="13" 
+                            FontWeight="DemiBold"/>
                 </Grid>
+
+                <GroupBox Header="Options" x:Name="groupOptions" FontWeight="DemiBold">
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="*" />
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto"/>
+                                <RowDefinition Height="Auto"/>
+                                <RowDefinition Height="*"/>
+                        </Grid.RowDefinitions>
+                        <StackPanel Grid.Column="0" Grid.Row="0" Margin="0,5,0,0">
+                            <CheckBox x:Name="isSingleWorkBook" 
+                                      Content="Create Single Workbook" 
+                                      IsChecked="False" 
+                                      Click="SingleWorkbook_Click" 
+                                      ToolTip="Check to create single workbook with sheet against each log file conent." 
+                                      Style="{DynamicResource SliderCheckBox}" 
+                                      FontWeight="DemiBold"/>
+                        </StackPanel>
+                            <StackPanel Grid.Column="1" Grid.Row="0" Margin="0,5,0,0">
+                                <CheckBox x:Name="createPivotTable" 
+                                          Content="Create Pivot Tables" 
+                                          IsChecked="False" 
+                                          Margin="110,0,0,0"
+                                          Click="PivotTable_Click" 
+                                          ToolTip="Check to create RPS pivot table with hour in filter." 
+                                          Style="{DynamicResource SliderCheckBox}" 
+                      FontWeight="DemiBold"/>
+                            </StackPanel>
+                            <Rectangle Height="5" Fill="Transparent" Grid.Row="1"/>
+                            <StackPanel Grid.Column="0" Grid.Row="2">
+                            <CheckBox x:Name="enableLogging" 
+                                      Content="Enable Application Logging" 
+                                      IsChecked="True" 
+                                      Click="EnableLogging_Click" 
+                                      ToolTip="Check to enable processing logs (one log per day)." 
+                                      Style="{DynamicResource SliderCheckBox}" 
+                                      FontWeight="DemiBold"/>
+                        </StackPanel>
+                        <StackPanel Grid.Column="1" Grid.Row="2">
+                            <CheckBox x:Name="systemTheme" 
+                                      Content="Enable Dark Mode" 
+                                      IsChecked="False" 
+                                      Margin="110,0,0,0"
+                                      Click="SystemTheme_Click" 
+                                      ToolTip="Check to apply dark theme." 
+                                      Style="{DynamicResource SliderCheckBox}" 
+                                      FontWeight="DemiBold"/>
+                        </StackPanel>
+                    </Grid>
+                </GroupBox>
+                
+                <StackPanel Margin="0,10,0,0">
+                    <ListBox ItemsSource="{Binding Path=LogFiles, Mode=TwoWay}"
+                             Name="lbLogFiles" 
+                             IsTabStop="False"
+                             ToolTip="List of log files to process."
+                             Height="130">
+                        <ListBox.ItemTemplate>
+                            <DataTemplate>
+                                <WrapPanel>
+                                    <TextBlock Text="{Binding ID, Mode=TwoWay}" 
+                                               Foreground="DeepSkyBlue"/>
+                                    <TextBlock Text="{Binding Name, Mode=TwoWay}"
+                                               Foreground="{Binding Color, Mode=TwoWay}" />
+                                </WrapPanel>
+                            </DataTemplate>
+                        </ListBox.ItemTemplate>
+                    </ListBox>
+                    <Button Name="processButton" 
+                            Content="PROCESS LOGS OF LISTED FILES" 
+                            Click="ProcessButton_Click" 
+                            Width="300" 
+                            HorizontalAlignment="Center"
+                            Margin="0,10,0,0"
+                            ToolTip="Click to process logs."
+                            Height="24" 
+                            Style="{DynamicResource RoundedButton}" 
+                            Background="LimeGreen" 
+                            FontWeight="Bold" 
+                            FontSize="13"/>
+                </StackPanel>
             </StackPanel>
         </DockPanel>
     </Border>
