--- a/IISLogsToExcel.xaml
+++ b/IISLogsToExcel.xaml
@@ -153,7 +153,8 @@
                             <DataTemplate>
                                 <WrapPanel>
                                     <TextBlock Text="{Binding ID, Mode=TwoWay}" 
-                                               Foreground="DeepSkyBlue"/>
+                                               Foreground="DeepSkyBlue"
+                                               FontWeight="DemiBold"/>
                                     <TextBlock Text="{Binding Name, Mode=TwoWay}"
                                                Foreground="{Binding Color, Mode=TwoWay}" />
                                 </WrapPanel>
