--- a/IISLogsToExcel.xaml
+++ b/IISLogsToExcel.xaml
@@ -11,6 +11,7 @@
         Drop="FolderPath_Drop"
         Closing="Window_Closing"
         MouseDoubleClick="Application_DblClick"
+        PreviewMouseRightButtonDown="Window_MouseRightButtonDown"
         ToolTip="Converts IIS log data to excel. Drop log folder here to select location.">
     <Window.Resources>
         <ResourceDictionary>
