--- a/MessageDialog.xaml
+++ b/MessageDialog.xaml
@@ -19,6 +19,10 @@
             <Grid Background="{StaticResource ControlEnabled}" DockPanel.Dock="Top" >
                 <TextBlock Name="AppTitle" FontWeight="DemiBold" Margin="0, 0, 0, 2" Text="Window" 
                            HorizontalAlignment="Center" VerticalAlignment="Top" />
+                <Button Name="closeDlg" Content="X" Width="18" HorizontalAlignment="Right" 
+                        VerticalAlignment="Top" Margin="0,0,0,2" Click="No_Click" ToolTip="Close"
+                        FontWeight="DemiBold" Style="{DynamicResource RoundedButton}" 
+                        Background="Red"/>
             </Grid>
             <StackPanel Margin="20">
                 <StackPanel Orientation="Horizontal">
